--- a/styles/login-hover.css
+++ b/styles/login-hover.css
@@ -11,10 +11,24 @@ body {
     margin-top: 20px;
 }
 
+#logo-cover {
+    display: inherit;
+    flex-direction: row;
+    max-width: 100px;
+    justify-content: center;
+}
+
+.x {
+    display: inherit;
+    align-self: start;
+    margin: 5px 0 0 15px;
+    opacity: 0.5;
+}
+
 #logo {
-    width: 35px;
-    height: auto;
-    margin-bottom: 70px;
+    margin-top: -35px;
+    height: 30px;
+    margin-bottom: 90px;
 }
 
 #text-cover {
@@ -105,7 +119,7 @@ body {
 .signup {
     margin-left: -90px;
     margin-top: 30px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 a:-webkit-any-link {
