--- a/styles/login.css
+++ b/styles/login.css
@@ -107,7 +107,7 @@ h3 {
     margin-bottom: 10px;
 }
 
-#sign-in {
+.sign-in {
     color: rgb(29, 155, 240);
 }
 
@@ -129,4 +129,172 @@ li a {
     text-decoration: none;
     font-size: 0.8em;
 
+}
+
+/*Hover Section*/
+
+.main {
+    position: relative;
+    z-index: 0;
+}
+
+.google-cover-login:hover,
+.twitter-cover-login:hover,
+.fa-x:hover,
+.next-cover-login:hover,
+.forgot-password,
+#up:hover {
+    cursor: pointer;
+}
+
+.entire-cover-login {
+    background-color: white;
+    position: fixed;
+    top: 3%;
+    left: 28%;
+    width: 39rem;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    z-index: 200;
+    padding: 30px 0 50px 0;
+    border-radius: 20px;
+}
+
+#logo-cover-login {
+    display: inherit;
+    flex-direction: row;
+    max-width: 100px;
+    justify-content: center;
+}
+
+.x {
+    display: inherit;
+    align-self: start;
+    flex: 1;
+    margin: 5px 0 0 15px;
+    opacity: 0.5;
+}
+
+#logo-twit {
+    margin-top: -35px;
+    height: 30px;
+    flex: 1;
+}
+
+#text-cover-login {
+    margin-left: -95px;
+    margin-bottom: 10px;
+}
+
+#text {
+    font-size: 1.6em;
+}
+
+.google-cover-login,
+.twitter-cover-login,
+.next-cover-login,
+.forgot-password-login {
+    display: flex;
+    width: 300px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgb(207, 217, 222);
+    border-radius: 30px;
+    padding: 7px;
+    gap: 5px;
+}
+
+.google-cover-login {
+    color: gray;
+}
+
+.next-cover-login,
+.forgot-password-login {
+    background-color: black;
+    color: white;
+    margin-bottom: 7px;
+    border: 1px solid rgba(207, 217, 222);
+    height: 35px;
+    font-weight: bold;
+    font-size: 15px;
+    padding-top: 10px;
+}
+
+.forgot-password-login {
+    color: black;
+    background-color: white;
+}
+
+.google-cover-login p,
+.twitter-cover-login p {
+    margin-top: 5px;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+#google-logo-g,
+#apple-logo-g {
+    height: 18px;
+}
+
+.or-cover-login {
+    display: inherit;
+    align-items: center;
+    gap: 5px;
+    margin-top: -8px;
+}
+
+.line-login {
+    border-top: 1px solid rgb(30, 30, 30);
+    opacity: 0.2;
+    width: 135px;
+}
+
+#info-login {
+    padding: 20px 10px;
+    width: 300px;
+    height: auto;
+    border: 1px solid rgba(128, 128, 128, 0.3);
+    border-radius: 5px;
+}
+
+#info-login::placeholder {
+    color: gray;
+    font-size: 17px;
+}
+
+.signup-login {
+    margin-left: -90px;
+    margin-top: 20px;
+    font-size: 15px;
+}
+
+#dont {
+    color: gray;
+}
+
+#dont > a {
+    text-decoration: none;
+    color: rgb(29, 155, 240);
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1;
+}
+
+.show {
+    display: flex;
+}
+
+.close {
+    display: none;
 }
