--- a/styles/login.css
+++ b/styles/login.css
@@ -281,6 +281,11 @@ li a {
     color: rgb(29, 155, 240);
 }
 
+.next-cover-login > p > a {
+    text-decoration: none;
+    color: white;
+}
+
 .overlay {
     display: none;
     position: fixed;
