--- a/styles/queries.css
+++ b/styles/queries.css
@@ -41,6 +41,9 @@
 
     .entire-cover-login {
         left: 0;
+        top: 0;
         width: 100%;
+        height: 100%;
+        border-radius: 0;
     }
 }
