--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,30 @@
+body {
+    font-family: Nimbus Sans, Poppins, Helvetica, Arial, serif;
+}
+
 .left-side-cover {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    margin-left: 30px;
+    margin-left: 60px;
+    margin-top: 20px;
+    gap: 20px;
 }
 
 .object {
     display: inherit;
-    gap: 10px
+    align-items: center;
+    gap: 15px
+}
+
+.object {
+   font-size: 1.5em;
+}
+
+.object > p {
+    margin: 6px 0 0 0;
 }
 
 .twitter-logo {
     height: 30px;
-    margin-bottom: 20px;
+    /*margin-bottom: 10px;*/
 }
